--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -58,7 +58,7 @@ Through these challenges, and discovering only small changes to the original pro
 
 As described in the design section, a requirement from the client model was to store information about users (See section \ref{model}). During the early stages of implementation, it was believed it would be sufficient to display the user's nickname in the chat window. This was achieved by polling the `User' list stored in the model any time a message was received. However, as the implementation progressed it became clear that many areas on the interface dynamically updated friend information--including the contact list, group chat window, and single chat window. As the implementations of these interface features were gradual, the original approach was to update each area of the interface in isolation whenever the server alerted the client of a change. We encountered problems with this approach when an error was encountered which caused the client to go into an infinite loop of being informed. Every time there was an update to a user's information, it sent a request to the server to receive this update. The behaviour of updating information was coupled across many classes, and it was therefore difficult to track down the source of the problem. As the team became familiar with Swing, it was realised that the behaviour could be uncoupled to a degree by implementing Swing's `listener' interface on the User collection in the model, where content was dynamic. This meant that any time user information changed, the listener event would update the interface in any place necessary. This change successfully made our code more scalable, as it would be possible in future development to display information about friends in other windows. Furthermore, it increased the ease of maintenance. When we changed the implementation of the buddy list, we only had to change what actions our listener within the contact list's class did on an update, rather than all the previously coupled classes. 
 
-Another significant evolution in our code, also centred around our use of Swing, was a need to overcome a problem with rendering the contact list. As a contact list naturally follows a tree structure, with branches arranged by status or group name, we thought the Swing `JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like leaves on branches, which is suitable for when contacts are added, removed, or their status changes. However, we experienced rendering problems with the JTree component in Swing across different platforms. On Windows-based platforms, friend elements were pushed together, and it ruined the appearance of the contact list. After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. %TODO: [write about writing own renderer, write about merits of JLists compared to JTrees.]
+Another significant evolution in our code, also centred around our use of Swing, was a need to overcome a problem with rendering the contact list. As a contact list naturally follows a tree structure, with branches arranged by status or group name, we thought the Swing `JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like leaves on branches, which is suitable for when contacts are added, removed, or their status changes. However, we experienced rendering problems with the JTree component in Swing across different platforms. On Windows-based platforms, friend elements were pushed together, and it ruined the appearance of the contact list. After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. %TODO: [James!(othy): write about writing own renderer, write about merits of JLists compared to JTrees.]
 
 This outcome was advantageous as this code could be re-used in group chats, which gave the user list in group chats the same appearance as the friend list. This replaced the textual user list we originally had, and greatly improved the appearance of the interface.  
 
