does this even make sense?

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -60,4 +60,8 @@ As described in the design section, a requirement from the client model was to s
 
 Another significant evolution in our code, also centred around our use of Swing, was a need to overcome a problem with rendering the contact list. As a contact list naturally follows a tree structure, with branches arranged by status or group name, we thought the Swing `JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like leaves on branches, which is suitable for when contacts are added, removed, or their status changes. However, we experienced rendering problems with the JTree component in Swing across different platforms. On Windows-based platforms, friend elements were pushed together, and it ruined the appearance of the contact list. After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. JLists proved much simpler and more reliable than JTree. Although JList lackes some of the features found in JTrees, such as colappsing branches, these were easily replaced with menu entries to toggle the visibility of offline users. As both the JTree and JList use the same rendering framework we could reuse the rendered in the JList. This outcome was advantageous as this code could be re-used in group chats, which gave the user list in group chats the same appearance as the friend list. This replaced the textual user list we originally had, and greatly improved the appearance of the interface.  
 
-Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component with events that needed to occur during the login process. Our original approach was for the client to wait for the \texttt{:AUTHORISED:} command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic because there was a delay in the update of the buddy list information, which meant the default values would be displayed, for example their e-mail address in place of the nickname. This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the \texttt{:INFO:} command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface. 
+Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component with events that needed to occur during the login process. Our original approach was for the client to wait for the \texttt{:AUTHORISED:} command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic because there was a delay in the update of the buddy list information, which meant the default values would be displayed, for example their e-mail address in place of the nickname. This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the \texttt{:INFO:} command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface.
+
+We encountered problems in the way we were using the JFrame Swing Component. Originally, all windows in the client were an instance of the same class, which extended JFrame. This class contained a JPanel as an instance variable, which we used for the functionality of different windows. This was useful as it allowed us to change the contents of a window - which was neccessary when the log in panel transitions to the friend list after the user has logged in. However, this method of creating windows was limitted in customisability. When we attempted to create menus for client windows, we found the same menu options were shared between the buddy list and the chat windows. A possible solution would have been to make a menu an instance variable, and change this value depending on the window being created. We decided to instead create a new window container for chat windows (named ChatWindow.java), to make the menus easier to manage. This made the menu's listeners more easy to maintain as we didn't have to work out a way for the window to know what type of window it was, and which listener to create.   
+
+
