Pretty pictures for schedule

--- a/TP3/dissertation/appendix/cases.tex
+++ b/TP3/dissertation/appendix/cases.tex
@@ -56,7 +56,7 @@ User clicks on their status and is given an option of either Online, Busy, Away,
 
 {\bf Actors}: User
 
-User either clicks ``options'' on the top menu and the options panel appears, or directly on their name in the main window and they type the new name there. When ``ok'' is clicked at the bottom of the window, the window disappears and the user, plus anyone who is online and has them as a friend, can see their changed nickname.
+User either clicks ``Options'' on the top menu and the options panel appears, or directly on their name in the main window and they type the new name there. When ``OK'' is clicked at the bottom of the window, the window disappears and the user, plus anyone who is online and has them as a friend, can see their changed nickname.
 
 \subsection*{Option change}
 
