Small changes to Design chapter.

--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -11,7 +11,7 @@ The GIM server is primarily responsible for synchronising the communication betw
     \item{Storing user information such as nicknames, passwords, display pictures, friend lists, etc.}
 \end{itemize}
 
-This section discusses the design of the server to cope with these requirements and the the reasoning behind these decisions.
+This section discusses how the design of the server copes with these requirements and the the reasoning behind these decisions.
 
 \subsection{Server Structure}
 
