--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -14,15 +14,10 @@ However, we faced challenges in adapting an additional networking component to i
 	
 This high level approach allowed us to draw boundaries between components and assign the more detailed design of individual components to team members. We decided a logical split would be to assign two members to the networking aspects of the system (client and server), and two members to the GUI components of the system (the GUI and its model). However, further collaboration was required to allow this design to happen in parallel. This involved planning how the components would talk to one another, as will be discussed in in section \ref{controller}
 
-%TODO: [Diagram goes here, reflecting the above discussion (???) ]
-
 \subsection {Model-Viewer-Controller Structural Concerns}
-%TODO: this section
 
-\subsection {Controller}
+\subsubsection {Controller}
 \label{controller}
-
-
 
 \begin{figure}
     \begin{center}
