Made the TOC shorter.

--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -51,6 +51,7 @@ We would also like to thanks all of those who helped test the program, even in t
 
 \educationalconsent
 
+\setcounter{tocdepth}{1}
 \tableofcontents
 
 \input{Introduction/introduction.tex}
