wrote outline of summary log

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -1,2 +1,30 @@
 \section{Summary Log}
 \label{sumlog}
+
+James:
+
+Organisation: Version Control, Server Hosting
+Design: Server design, protocol specification architects
+Implementation: Server, GUI Friend List JList renderer. GUI User data listeners.
+Report: Protocol Design, Server Design + Implementation
+
+Heather:
+
+Organisation: Quality Assurance, report editter. Planning.
+Design: Interface design, requirements analysis, Client Structure
+Implementation: GUI Front end
+Report: Introduction, Problem Definition, Conclusion. Section introductions, section summaries. Editting. 
+
+
+Ewan:
+
+Design: Interface design, requirements analysis
+Documentation: Use cases, wire frames
+Implementation: GUI Front end
+
+Gordon:
+
+Organisation: Team secretary
+Design: Client Structure, some contributions to Protocol Specification 
+Implementation: Network Component, Gui Backend (model and controller)
+Report: Client Design, Networking Design, (Client Implementation), Evaluation
