--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -10,7 +10,7 @@ Report: Protocol Design, Server Design + Implementation
 
 Heather:
 
-Organisation: Quality Assurance, report editter. Planning.
+Organisation: Quality Assurance, report editter. Planning. Internal meetings manager.
 Design: Interface design, requirements analysis, Client Structure
 Implementation: GUI Front end
 Report: Introduction, Problem Definition, Conclusion. Section introductions, section summaries. Editting. 
