small change again

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -21,6 +21,7 @@ Ewan:
 Design: Interface design, requirements analysis
 Documentation: Use cases, wire frames
 Implementation: GUI Front end
+Report: Design of GUI, Requirements (features), Appendix 
 
 Gordon:
 
