Summary log slightly changed.

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -4,17 +4,16 @@
 James:
 
 Organisation: Version Control, Server Hosting
-Design: Server design, protocol specification architects
+Design: Server design, protocol specification architect
 Implementation: Server, GUI Friend List JList renderer. GUI User data listeners.
 Report: Protocol Design, Server Design + Implementation
 
 Heather:
 
-Organisation: Quality Assurance, report editter. Planning. Internal meetings manager.
+Organisation: Quality Assurance, report editor. Planning. Internal meetings manager.
 Design: Interface design, requirements analysis, Client Structure
-Implementation: GUI Front end
-Report: Introduction, Problem Definition, Conclusion. Section introductions, section summaries. Editting. 
-
+Implementation: GUI Front end, some networking interface implementation
+Report: Introduction, Problem Definition, Conclusion. GUI Implementation section. Section introductions, section summaries. Editing. 
 
 Ewan:
 
@@ -26,6 +25,6 @@ Report: Design of GUI, Requirements (features), Appendix
 Gordon:
 
 Organisation: Team secretary
-Design: Client Structure, some contributions to Protocol Specification 
+Design: Client Structure, some contributions to Protocol Specification
 Implementation: Network Component, Gui Backend (model and controller)
 Report: Client Design, Networking Design, (Client Implementation), Evaluation
