added summit, innit?

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -26,5 +26,5 @@ Gordon:
 
 Organisation: Team secretary
 Design: Client Structure, some contributions to Protocol Specification
-Implementation: Network Component, Gui Backend (model and controller)
+Implementation: Network Component, Gui Backend (model and controller: mainly creating windows, and routing messages to windows, and managing chats between clients)
 Report: Client Design, Networking Design, (Client Implementation), Evaluation
