Small changes to schedule doc.

--- a/TP3/dissertation/appendix/schedule.tex
+++ b/TP3/dissertation/appendix/schedule.tex
@@ -2,7 +2,7 @@
 
 \section{Schedule}
 
-As with any software project, planning is an important aspect. As is to be expected from a group without prior experience in team work, the original schedule was overly optimistic. Other course deadlines and a failure to appriciate the time requirements of each stage resulted in a failure to meet our planned deadlines. 
+As with any software project, planning is an important aspect. As is to be expected from a group without much prior experience in teamwork, the original schedule was overly optimistic. Other course deadlines and a failure to appreciate the time requirements of each stage resulted in a failure to meet our planned deadlines. 
 
 \begin{figure}[!h]
     \begin{center}
