Finished server section.

--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -62,20 +62,20 @@ A user can have one of only two states, Online or Offline. States should not be 
 Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List.}
 \end{itemize}
 
-
-
 \subsection{Client-to-Client Messaging}
 \label{c2c}
-No direct client-to-client communication is possible. However, workers and (in an ad-hoc fashion) clients are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker.
+No direct client-to-client communication is possible. Instead workers are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker. This was do so that a client's worker was able monitor everything sent to and received from the client and update their own internal status in a reliable manner.
 
 As the protocol defines no client to client communication is possible before a user has logged in, and as user can only be logged in on one client at a time, only a user id is necessary to send a command to a user. As long as a record is kept of which worker belongs to each online user, then sending a message to a user is no more complicated than identifying the particular user.
 
 \subsection{Rooms and Message Routing}
 \label{message_routing}
 
-Message routing in the server is fairly simple because of the use of rooms. A room is a collection of one or more users and each room has a unique identifier. In order to join a room a user must either create a new room (in which case they are automatically placed into the room) or they must be invited to the room by a user already in the room. A room can be one of two types: personal or group. A personal room is much more restrictive than a group room. A personal room must be provided with the identifier of one other user at time of creation and is limited to only 2 users. Once a personal room has been created you cannot invite any other users. A group room has no such restrictions. Any number of users may be invited to a group room at any time.
+Message routing in the server is fairly simple because of the use of rooms. A room is a collection of one or more users and each room has a unique identifier. The concept of rooms was chosen as it is a familiar concept to the team and users of instant messaging in general. It also means that messages do not require a specific recipient and do not need to be sent from the client to more than one user as the server can then broadcast it to all of the users in the room. 
 
-All chat messages in GIM are sent to Rooms rather than particular users. The server must maintain a list of the users in each room, and upon receipt of a message for that room, forward it to all of the users in the room (excluding the sender of the message). This is done using the method described in section \ref{c2c}. A \texttt{:MESSAGE:} command is generated and placed into the Response Buffer of the worker assigned to each of the recipients ready for the worker to send to the client.
+In order to join a room a user must either create a new room (in which case they are automatically placed into the room) or they must be invited to the room by a user already in the room. A room can be one of two types: personal or group. A personal room is much more restrictive than a group room. A personal room must be provided with the identifier of one other user at time of creation and is limited to only 2 users. Once a personal room has been created you cannot invite any other users. A group room has no such restrictions. Any number of users may be invited to a group room at any time. The different types of room allow the client to differentiate between the types of chat and allows them to handle rooms differently. For example, the client may want to join personal chats automatically but give the user an option before joining a group chat.
+
+As chat messages in GIM are sent to rooms rather than particular users, the server must maintain a list of the users in each room, and upon receipt of a message for that room, forward it to all of the users in the room (excluding the sender of the message). This is done using the method described in section \ref{c2c}. A \texttt{:MESSAGE:} command is generated and placed into the Response Buffer of the worker assigned to each of the recipients ready for the worker to send to the client.
 
 \subsection{Subscriptions, Privacy and Notifications}
 One of the server's most critical responsibilities is notifying users of changes to other users. This is done using the concept of subscriptions. A user (the subscriber) is considered to be subscribed to another user (the subscribee) if they meet at least one of two conditions:
@@ -85,7 +85,7 @@ One of the server's most critical responsibilities is notifying users of changes
 \item{Both the subscriber and subscribee are in the same room}
 \end{enumerate}
 
-When a user changes any piece of their user information such as their status, nickname, or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when and if it needs it.
+When a user changes any piece of their user information such as their status, nickname, or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when and if it needs it. For example, a client may not display users display pictures and sending the display picture every time a user changes it would be very wasteful in such a situation.
 
 Subscriptions are also used as a method of access control. A user is only able to request information about another user if they are subscribed to that user. This limitation means that a user is effectively granting another user access to read their information by adding them to their friend list. However, the converse is not true. Removing a user from your friend list does not remove their access to your information as they may still have you in their friend list. In order to combat this, you are able to block a user which removes this access to your information and status updates. This enhances privacy and gives the user control of who is able to access their data.
 
